--- a/beetle-shop.html
+++ b/beetle-shop.html
@@ -92,84 +92,85 @@
     </div>
     <div class="main-product">
         <ul>
-            <li class="top-item" data-name="長戟大兜Dynastes hercules hercules">
+            <li class="top-item" data-name="長戟大兜" data-price="15000" data-date="2024-01-01">
                 <a href="#">
                     <div class="img-box">
-                    <img src="./img/img-beetle-shop/product_top_1.png" alt="長戟大兜"></div>
-                    <h3>長戟大兜<br> 
-                        Dynastes hercules hercules</h3>
+                        <img src="./img/img-beetle-shop/product_top_1.png" alt="長戟大兜">
+                    </div>
+                    <h3>長戟大兜<br> Dynastes hercules hercules</h3>
                     <p>NT$ 15000</p>
                 </a>
             </li>
-            <li class="top-item" data-name="馬場黃金鬼鍬形蟲Allotopus moellenkampi babai">
+            <li class="top-item" data-name="馬場黃金鬼鍬形蟲" data-price="1800" data-date="2024-02-15">
                 <a href="#">
                     <div class="img-box">
-                    <img src="./img/img-beetle-shop/product_top_2.png" alt="馬場黃金鬼鍬形蟲"></div>
-                    <h3>馬場黃金鬼鍬形蟲<br>
-                        Allotopus moellenkampi babai</h3>
+                        <img src="./img/img-beetle-shop/product_top_2.png" alt="馬場黃金鬼鍬形蟲">
+                    </div>
+                    <h3>馬場黃金鬼鍬形蟲<br> Allotopus moellenkampi babai</h3>
                     <p>NT$ 1800</p>
                 </a>
             </li>
-            <li data-name="螃蟹鍬形蟲喀麥隆產Homoderus meillyi">
+            <li data-name="螃蟹鍬形蟲" data-price="1000" data-date="2024-03-20">
                 <a href="#">
                     <div class="img-box">
-                    <img src="./img/img-beetle-shop/product_main_1.png" alt="螃蟹鍬形蟲"></div>
-                    <h3>螃蟹鍬形蟲 喀麥隆產<br> 
-                        Homoderus meillyi  </h3>
+                        <img src="./img/img-beetle-shop/product_main_1.png" alt="螃蟹鍬形蟲">
+                    </div>
+                    <h3>螃蟹鍬形蟲 喀麥隆產<br> Homoderus meillyi</h3>
                     <p>NT$ 1000</p>
                 </a>
             </li>
-            <li data-name="日本大鍬形蟲肝川產Dorcus hopei binodulosus">
+            <li data-name="日本大鍬形蟲" data-price="2500" data-date="2024-04-10">
                 <a href="#">
                     <div class="img-box">
-                    <img src="./img/img-beetle-shop/product_main_2.png" alt="日本大鍬形蟲 肝川產"></div>
-                    <h3>日本大鍬形蟲 肝川產<br>
-                        Dorcus hopei binodulosus</h3>
+                        <img src="./img/img-beetle-shop/product_main_2.png" alt="日本大鍬形蟲">
+                    </div>
+                    <h3>日本大鍬形蟲 肝川產<br> Dorcus hopei binodulosus</h3>
                     <p>NT$ 2500</p>
                 </a>
             </li>
-            <li data-name="長頸鹿鋸齒鍬形蟲西山保典亞種Prosopocoilus giraffa nishiyamai">
+            <li data-name="長頸鹿鋸齒鍬形蟲" data-price="2999" data-date="2024-05-05">
                 <a href="./beetle-product.html">
                     <div class="img-box">
-                    <img src="./img/img-beetle-shop/product_main_3.png" alt="長頸鹿鋸齒鍬形蟲 西山保典亞種"></div>
-                    <h3>長頸鹿鋸齒鍬形蟲<br>西山保典亞種<br> 
-                        Prosopocoilus giraffa nishiyamai</h3>
+                        <img src="./img/img-beetle-shop/product_main_3.png" alt="長頸鹿鋸齒鍬形蟲">
+                    </div>
+                    <h3>長頸鹿鋸齒鍬形蟲<br>西山保典亞種<br> Prosopocoilus giraffa nishiyamai</h3>
                     <p>NT$ 2999</p>
                 </a>
             </li>
-            <li data-name="吐噶喇鋸鍬形蟲Prosopocoilus dissimilis">
+            <li data-name="吐噶喇鋸鍬形蟲" data-price="800" data-date="2024-06-15">
                 <a href="#">
                     <div class="img-box">
-                    <img src="./img/img-beetle-shop/product_main_4.png" alt="吐噶喇鋸鍬形蟲"></div>
-                    <h3>吐噶喇鋸鍬形蟲<br> 
-                        Prosopocoilus dissimilis </h3>
+                        <img src="./img/img-beetle-shop/product_main_4.png" alt="吐噶喇鋸鍬形蟲">
+                    </div>
+                    <h3>吐噶喇鋸鍬形蟲<br> Prosopocoilus dissimilis</h3>
                     <p>NT$ 800</p>
                 </a>
             </li>
-            <li data-name="大王花金龜 GGAGoliathus goliatus">
+            <li data-name="大王花金龜 GGAGoliathus goliatus" data-price="1000" data-date="2024-07-18">
                 <a href="#">
                     <div class="img-box">
-                    <img src="./img/img-beetle-shop/product_main_5.png" alt="大王花金龜 GGA"></div>
-                    <h3>大王花金龜 GGA<br>
-                        Goliathus goliatus</h3>
+                        <img src="./img/img-beetle-shop/product_main_5.png" alt="大王花金龜 GGA">
+                    </div>
+                    <h3>大王花金龜 GGA<br>Goliathus goliatus</h3>
                     <p>NT$ 1000</p>
                 </a>
             </li>
-            <li data-name="彩虹鍬形蟲(Red)Phalacrognathus muelleri">
+            <li data-name="彩虹鍬形蟲(Red)Phalacrognathus muelleri" data-price="1000" data-date="2024-08-01">
                 <a href="#">
                     <div class="img-box">
-                    <img src="./img/img-beetle-shop/product_main_6.png" alt="彩虹鍬形蟲(Red)"></div>
-                    <h3>彩虹鍬形蟲(Red)<br> 
-                        Phalacrognathus muelleri</h3>
+                        <img src="./img/img-beetle-shop/product_main_6.png" alt="吐噶喇鋸鍬形蟲">
+                    </div>
+                    <h3>彩虹鍬形蟲(Red)<br>Phalacrognathus muelleri</h3>
                     <p>NT$ 1000</p>
                 </a>
             </li>
         </ul>
     </div>
+    
 
-<!-- RWD商品目錄 -->
+    <!-- RWD商品目錄 -->
     <ul class="rwd-product">
-        <li data-name="長戟大兜Dynastes hercules hercules">
+        <li data-name="長戟大兜Dynastes hercules hercules" data-price="15000" data-date="2024-01-15">
             <a href="#" class="rwd-link">
                 <div class="rwd-box">
                 <img src="./img/img-beetle-shop/rwd_1.png" alt="長戟大兜"></div>
@@ -178,7 +179,7 @@
                 <p>NT$ 15000</p>
             </a>
         </li>
-        <li data-name="馬場黃金鬼鍬形蟲Allotopus moellenkampi babai">
+        <li data-name="馬場黃金鬼鍬形蟲Allotopus moellenkampi babai" data-price="1800" data-date="2024-02-10">
             <a href="#" class="rwd-link">
                 <div class="rwd-box">
                 <img src="./img/img-beetle-shop/rwd_2.png" alt="馬場黃金鬼鍬形蟲"></div>
@@ -187,16 +188,16 @@
                 <p>NT$ 1800</p>
             </a>
         </li>
-        <li data-name="螃蟹鍬形蟲喀麥隆產Homoderus meillyi">
+        <li data-name="螃蟹鍬形蟲喀麥隆產Homoderus meillyi" data-price="1000" data-date="2024-03-05">
             <a href="#" class="rwd-link">
                 <div class="rwd-box">
                 <img src="./img/img-beetle-shop/rwd_3.png" alt="螃蟹鍬形蟲"></div>
                 <h3>螃蟹鍬形蟲<br>喀麥隆產<br> 
-                    Homoderus meillyi  </h3>
+                    Homoderus meillyi</h3>
                 <p>NT$ 1000</p>
             </a>
         </li>
-        <li data-name="日本大鍬形蟲肝川產Dorcus hopei binodulosus">
+        <li data-name="日本大鍬形蟲肝川產Dorcus hopei binodulosus" data-price="2500" data-date="2024-04-20">
             <a href="#" class="rwd-link">
                 <div class="rwd-box">
                 <img src="./img/img-beetle-shop/rwd_4.png" alt="日本大鍬形蟲 肝川產"></div>
@@ -205,25 +206,25 @@
                 <p>NT$ 2500</p>
             </a>
         </li>
-        <li data-name="長頸鹿鋸齒鍬形蟲西山保典亞種Prosopocoilus giraffa nishiyamai">
+        <li data-name="長頸鹿鋸齒鍬形蟲西山保典亞種Prosopocoilus giraffa nishiyamai" data-price="2999" data-date="2024-05-10">
             <a href="./beetle-product.html" class="rwd-link">
                 <div class="rwd-box">
                 <img src="./img/img-beetle-shop/rwd_5.png" alt="長頸鹿鋸齒鍬形蟲 西山保典亞種"></div>
                 <h3>長頸鹿鋸齒鍬形蟲<br>西山保典亞種<br> 
-                    Prosopocoilus giraffa nishiyamai</h3>
+                    Prosopocoilus giraffa nishiyamai</h3>
                 <p>NT$ 2999</p>
             </a>
         </li>
-        <li data-name="吐噶喇鋸鍬形蟲Prosopocoilus dissimilis">
+        <li data-name="吐噶喇鋸鍬形蟲Prosopocoilus dissimilis" data-price="800" data-date="2024-06-01">
             <a href="#" class="rwd-link">
                 <div class="rwd-box">
                 <img src="./img/img-beetle-shop/rwd_6.png" alt="吐噶喇鋸鍬形蟲"></div>
                 <h3>吐噶喇鋸鍬形蟲<br> 
-                    Prosopocoilus dissimilis </h3>
+                    Prosopocoilus dissimilis</h3>
                 <p>NT$ 800</p>
             </a>
         </li>
-        <li data-name="大王花金龜 GGAGoliathus goliatus">
+        <li data-name="大王花金龜 GGAGoliathus goliatus" data-price="1000" data-date="2024-07-18">
             <a href="#" class="rwd-link">
                 <div class="rwd-box">
                 <img src="./img/img-beetle-shop/rwd_7.png" alt="大王花金龜 GGA"></div>
@@ -232,7 +233,7 @@
                 <p>NT$ 1000</p>
             </a>
         </li>
-        <li data-name="彩虹鍬形蟲(Red)Phalacrognathus muelleri)">
+        <li data-name="彩虹鍬形蟲(Red)Phalacrognathus muelleri" data-price="1000" data-date="2024-08-01">
             <a href="#" class="rwd-link">
                 <div class="rwd-box">
                 <img src="./img/img-beetle-shop/rwd_8.png" alt="彩虹鍬形蟲(Red)"></div>
@@ -242,6 +243,7 @@
             </a>
         </li>
     </ul>
+
     
     <!-- 底部按鈕 -->
  </div>
