--- a/beetle-shop copy.html
+++ b/beetle-shop copy.html
@@ -60,10 +60,9 @@
     </ol>
 </nav>
 
-<!-- 商品分類RWD -->
+<!-- 搜尋列 -->
 <button id="filter"><i class="fa-solid fa-filter"></i>&nbsp;&nbsp;&nbsp;&nbsp;商品分類</button>
 
-<!-- 搜尋列 -->
 <form class="search">
     <button type="submit" id="searchBtn" disabled>
         <i class="fa-solid fa-magnifying-glass"></i>
@@ -75,6 +74,7 @@
         <option value="low_to_high">價格低到高</option>
         <option value="new_to_old">日期新到舊</option>
         <option value="old_to_new">日期舊到新</option>
+
     </select>
 </form>
 
@@ -93,7 +93,7 @@
     </div>
     <div class="main-product">
         <ul>
-            <li class="top-item" data-name="長戟大兜Dynastes hercules hercules" data-price="15000" data-date="2024-01-01" data-bfore="dhh">
+            <li class="top-item" data-name="長戟大兜" data-price="15000" data-date="2024-01-01">
                 <a href="#">
                     <div class="img-box">
                         <img src="./img/img-beetle-shop/product_top_1.png" alt="長戟大兜">
@@ -102,7 +102,7 @@
                     <p>NT$ 15000</p>
                 </a>
             </li>
-            <li class="top-item" data-name="馬場黃金鬼鍬形蟲Allotopus moellenkampi babai" data-price="1800" data-date="2024-02-15">
+            <li class="top-item" data-name="馬場黃金鬼鍬形蟲" data-price="1800" data-date="2024-02-15">
                 <a href="#">
                     <div class="img-box">
                         <img src="./img/img-beetle-shop/product_top_2.png" alt="馬場黃金鬼鍬形蟲">
@@ -111,7 +111,7 @@
                     <p>NT$ 1800</p>
                 </a>
             </li>
-            <li data-name="螃蟹鍬形蟲喀麥隆產Homoderus meillyi" data-price="1000" data-date="2024-03-20">
+            <li data-name="螃蟹鍬形蟲" data-price="1000" data-date="2024-03-20">
                 <a href="#">
                     <div class="img-box">
                         <img src="./img/img-beetle-shop/product_main_1.png" alt="螃蟹鍬形蟲">
@@ -120,7 +120,7 @@
                     <p>NT$ 1000</p>
                 </a>
             </li>
-            <li data-name="日本大鍬形蟲肝川產Dorcus hopei binodulosus" data-price="2500" data-date="2024-04-10" data-bfore="dhb">
+            <li data-name="日本大鍬形蟲" data-price="2500" data-date="2024-04-10">
                 <a href="#">
                     <div class="img-box">
                         <img src="./img/img-beetle-shop/product_main_2.png" alt="日本大鍬形蟲">
@@ -129,7 +129,7 @@
                     <p>NT$ 2500</p>
                 </a>
             </li>
-            <li data-name="長頸鹿鋸齒鍬形蟲西山保典亞種Prosopocoilus giraffa nishiyamai" data-price="2999" data-date="2024-05-05" data-after="pgn">
+            <li data-name="長頸鹿鋸齒鍬形蟲" data-price="2999" data-date="2024-05-05">
                 <a href="./beetle-product.html">
                     <div class="img-box">
                         <img src="./img/img-beetle-shop/product_main_3.png" alt="長頸鹿鋸齒鍬形蟲">
@@ -138,7 +138,7 @@
                     <p>NT$ 2999</p>
                 </a>
             </li>
-            <li data-name="吐噶喇鋸鍬形蟲Prosopocoilus dissimilis" data-price="800" data-date="2024-06-15">
+            <li data-name="吐噶喇鋸鍬形蟲" data-price="800" data-date="2024-06-15">
                 <a href="#">
                     <div class="img-box">
                         <img src="./img/img-beetle-shop/product_main_4.png" alt="吐噶喇鋸鍬形蟲">
@@ -171,7 +171,7 @@
 
     <!-- RWD商品目錄 -->
     <ul class="rwd-product">
-        <li data-name="長戟大兜Dynastes hercules hercules" data-price="15000" data-date="2024-01-15" data-bfore="dhh">
+        <li data-name="長戟大兜Dynastes hercules hercules" data-price="15000" data-date="2024-01-15">
             <a href="#" class="rwd-link">
                 <div class="rwd-box">
                 <img src="./img/img-beetle-shop/rwd_1.png" alt="長戟大兜"></div>
@@ -198,7 +198,7 @@
                 <p>NT$ 1000</p>
             </a>
         </li>
-        <li data-name="日本大鍬形蟲肝川產Dorcus hopei binodulosus" data-price="2500" data-date="2024-04-20" data-bfore="dhb">
+        <li data-name="日本大鍬形蟲肝川產Dorcus hopei binodulosus" data-price="2500" data-date="2024-04-20">
             <a href="#" class="rwd-link">
                 <div class="rwd-box">
                 <img src="./img/img-beetle-shop/rwd_4.png" alt="日本大鍬形蟲 肝川產"></div>
@@ -207,7 +207,7 @@
                 <p>NT$ 2500</p>
             </a>
         </li>
-        <li data-name="長頸鹿鋸齒鍬形蟲西山保典亞種Prosopocoilus giraffa nishiyamai" data-price="2999" data-date="2024-05-10" data-after="pgn">
+        <li data-name="長頸鹿鋸齒鍬形蟲西山保典亞種Prosopocoilus giraffa nishiyamai" data-price="2999" data-date="2024-05-10">
             <a href="./beetle-product.html" class="rwd-link">
                 <div class="rwd-box">
                 <img src="./img/img-beetle-shop/rwd_5.png" alt="長頸鹿鋸齒鍬形蟲 西山保典亞種"></div>
