--- a/beetle-product.html
+++ b/beetle-product.html
@@ -62,6 +62,9 @@
     </ol>
 </nav>
 
+<!-- 商品分類RWD -->
+<button id="filter"><i class="fa-solid fa-filter"></i>&nbsp;&nbsp;&nbsp;&nbsp;商品分類</button>
+
 <!-- 搜尋列 -->
 <form class="search">
     <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
@@ -100,6 +103,7 @@
                 <p>※ 母蟲10月初挖出；公蟲11月初挖出</p>
             </div>
             <div class="about-buy">
+
                 <div class="size">
                     <label for="">尺寸：</label>
                     <select name="size" id="size">
@@ -108,10 +112,22 @@
                         <option>&nbsp;97 mm++</option>
                     </select>
                 </div>
+
+                <div id="amount">    
+                    <label for="product-amount">數量：
+                    </label>
+                    <div class="amount-box">
+                        <input type="button" id="button-minus" value="-">
+                        <input type="number" value="1" min="1" step="1" id="product-amount">
+                        <input type="button" id="button-plus" value="+">
+                    </div>                        
+                </div>
+
                 <div class="buy">
                     <a href="#">加入購物車</a>
                     <a href="#">立刻購買</a>
                 </div>
+
             </div>
         </div>
     </div>
@@ -175,5 +191,7 @@
     </div>
 </body>
 <!-- 監聽滾動事件 -->
-<script src="./JavaScript/basic.js" ></script> 
+<script src="./JavaScript/basic.js" ></script>
+<script src="./JavaScript/jquery-3.7.1.js"></script> 
+<script src="./JavaScript/beetle-product.js"></script> 
 </html>
