--- a/beetle-product.html
+++ b/beetle-product.html
@@ -139,19 +139,19 @@
         <li>
             <a href="#">
                 <img src="./img/img-beetle-product/related-item1.png" alt="長頸鹿鋸齒鍬形蟲 西山保典亞種 幼蟲組">
-                <p>長頸鹿鋸齒鍬形蟲 西山保典亞種<br> Prosopocoilus giraffa nishiyamai<br>幼蟲組</p>
+                <p>長頸鹿鋸齒鍬形蟲<br>西山保典亞種<br> Prosopocoilus giraffa nishiyamai<br>幼蟲組</p>
             </a>
         </li>
         <li>
             <a href="#">
                 <img src="./img/img-beetle-product/related-item2.png" alt="長頸鹿鋸齒鍬形蟲 大輔亞種">
-                <p>長頸鹿鋸齒鍬形蟲 大輔亞種<br> Prosopocoilus giraffa daisukei</p>
+                <p>長頸鹿鋸齒鍬形蟲<br>大輔亞種<br> Prosopocoilus giraffa daisukei</p>
             </a>
         </li>
         <li>
             <a href="#">
                 <img src="./img/img-beetle-product/related-item3.png" alt="楓香產木">
-                <p>楓香產木<br> 15~20公分<br> 
+                <p>楓香產木 15~20公分<br> 
                     (中軟)</p>
             </a>
         </li>
