--- a/index.html
+++ b/index.html
@@ -22,6 +22,21 @@
     <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/record4.png" as="image">
 </head>
 <body>
+    <!-- 轉場動畫 -->
+<div id="preloader">
+    <div class="animation1">
+        <img src="./img/img-preloader/body.svg" alt="" class="DHHbody">
+        <img src="./img/img-preloader/bag.svg" alt="" class="DHHwing">
+        <img src="./img/img-preloader/wing.svg" alt="" class="DHHbag">        
+    </div>
+    <h1 id="loading">Loading</h1>
+    <div class="animation2">
+        <img src="./img/img-preloader/TDbody.svg" alt="" class="TDbody">
+        <img src="./img/img-preloader/TDwingTop.svg" alt="" class="TDwingT">
+        <img src="./img/img-preloader/TDwingBottom.svg" alt="" class="TDwingB">
+        <img src="./img/img-preloader/TDbag.svg" alt="" class="TDbag">
+    </div>
+    </div>  
 <!-- 頂端黏著header -->
     <div id="wrapper" class="wrapper" style="opacity: 1;">
         <div class="header2">
@@ -63,6 +78,8 @@
     </a>
     <a href="./shopping-cart.html" class="rwd-cart"><i class="fa-sharp fa-solid fa-cart-shopping"></i></a>
 </div>
+<!-- 從這裡開始 -->
+
 <!-- 首頁第一部分 -->   
         <div class="main-title">
             <div class="title-left">
@@ -122,4 +139,5 @@
  </body>
 <!-- 監聽滾動事件 -->
 <script src="./JavaScript/basic.js" ></script> 
+<script src="./JavaScript/preloader.js"></script>
 </html>
