preloader.js preload

--- a/index.html
+++ b/index.html
@@ -9,17 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Yuji+Boku&display=swap" rel="stylesheet">
 <!-- 預先載入 -->
-    <!-- <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/main-left.png" as="image">
-    <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/main.png" as="image">
-    <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/main-right.png" as="image">
-    <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/product1.png" as="image">
-    <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/product2.png" as="image">
-    <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/product3.png" as="image">
-    <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/product4.png" as="image">
-    <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/record1.png" as="image">
-    <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/record2.png" as="image">
-    <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/record3.png" as="image">
-    <link rel="preload" href="https://mysterio1001.github.io/TID10310_Poject-Report/img/image-index/record4.png" as="image"> -->
+    <link rel="preload" href="./JavaScript/preloader.js" as="script">
 </head>
 <body>
     <!-- 轉場動畫 -->
