--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>甲蟲羽錄 Recording of Beetles</title>
+    <link rel="stylesheet" href="./CSS/preloader.css">
+    <link rel="preload" href="./JavaScript/preloader.js" as="script">
     <link rel="stylesheet" href="./CSS/basic.css">
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Yuji+Boku&display=swap" rel="stylesheet">
-<!-- 預先載入 -->
-    <link rel="preload" href="./JavaScript/preloader.js" as="script">
+    <!-- 預先載入 -->
+    
+    
 </head>
 <body>
     <!-- 轉場動畫 -->
