--- a/beetle-bulletin.html
+++ b/beetle-bulletin.html
@@ -66,11 +66,15 @@
     </ol>
 </nav>
 <div class="content">
+    <div class="rwd-box"><img src="./img/img-beetle-bulletin/main-pic.png" alt="beetles" class="moblie-img"></div>
     <div class="beetle-background"><img src="./img/img-beetle-bulletin/explosion.png" alt="explosion" class="explosion"></div>
     <h2>歡迎來到甲蟲羽錄，我們專注於提供各種甲蟲的飼養及販售服務。無論您是甲蟲愛好者還是剛入門的新手，都可以在這裡找到合適的甲蟲，並獲得專業的飼養建議。我們的目標是分享甲蟲的魅力與知識，讓更多人了解並喜愛這些神奇的生物。</h2>
     <p>飼育問題、活動、課程以及標本訂製都歡迎洽詢</p>
     <h1>遇到疑難雜症？ 別擔心，因為我來了</h1>
-    <h3><i class="fa-solid fa-phone"></i>0922-180-199</h3>
+    <div class="phone">
+        <i class="fa-solid fa-phone"></i>
+        <a href="tel:0922180199" class="phone-number">0922-180-199</a>
+    </div>
     <div class="social-button">
         <ul>
             <li><a href="https://www.facebook.com/profile.php?id=100082416973415&mibextid=LQQJ4d" target="_blank"></a></li>
