rwd-shopping-cart

--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -74,7 +74,7 @@
     <div class="l-cart">
         <div class="product-detail">
             <img src="./img/img-shopping-cart/product1.png" alt="長頸鹿鋸齒鍬形蟲 西山保典亞種">
-            <h1>長頸鹿鋸齒鍬形蟲西山保典亞種<br>Prosopocoilus<br>giraffa nishiyamai</h1>
+            <h1>長頸鹿鋸齒鍬形蟲<br>西山保典亞種<br>Prosopocoilus<br>giraffa nishiyamai</h1>
             <p>NT$ 2,999</p>
 
             <label for="quantity"></label>
