--- a/checkout.html
+++ b/checkout.html
@@ -209,7 +209,7 @@
         <h1>訂單資訊</h1>
         <table>
             <tr>
-                <td>長頸鹿鋸齒鍬形蟲 西山保典亞種 Prosopocoilus giraffa nishiyamai</td>
+                <td>長頸鹿鋸齒鍬形蟲 西山保典亞種<br>Prosopocoilus giraffa nishiyamai</td>
                 <td>X 1</td>
                 <td>2,999 元</td>
             </tr>
