news-js-newsListTitleChange

--- a/news.html
+++ b/news.html
@@ -116,66 +116,66 @@
     <div class="news-list">
         <ul>
             <li class="breeding-info">
-                <img src="./img/image-news/list1.png" alt="">
                 <div class="small-box">
-                <p><i class="fa-solid fa-leaf"></i>&nbsp;五角大兜蟲大大大量發生中~~!!</p>
-                <span>第一輪幼蟲就破百，究竟還會有多少幼蟲呢?現在特價販售中，趕快去商店瞧瞧!</span>
+                    <img src="./img/image-news/list1.png" alt="">
+                    <p class="titleP"><i class="fa-solid fa-leaf"></i>&nbsp;五角大兜蟲大大大量發生中~~!!</p>
+                    <span>第一輪幼蟲就破百，究竟還會有多少幼蟲呢?現在特價販售中，趕快去商店瞧瞧!</span>
                 </div>
             </li>
             <li class="notice">
-                <img src="./img/image-news/list2.png" alt="">
                 <div class="small-box">
-                <p><i class="fa-solid fa-bullhorn"></i>&nbsp;甲蟲羽錄年曆預購出爐啦~</p>
-                <span>讓甲蟲一起陪你開始新的一年!趕緊聯繫我們的小幫手吧~</span>
+                    <img src="./img/image-news/list2.png" alt="">
+                    <p class="titleP"><i class="fa-solid fa-bullhorn"></i>&nbsp;甲蟲羽錄年曆預購出爐啦~</p>
+                    <span>讓甲蟲一起陪你開始新的一年!趕緊聯繫我們的小幫手吧~</span>
                 </div>
             </li>
             <li class="even">
-                <img src="./img/image-news/list3.png" alt="">
                 <div class="small-box">
-                <p><i class="fa-regular fa-calendar-days"></i>&nbsp;活動快報-</p>
-                <span>凡是消費滿二百，就贈送一對白條綠花金龜成體 數量有限送完為止。</span>
+                    <img src="./img/image-news/list3.png" alt="">
+                    <p class="titleP"><i class="fa-regular fa-calendar-days"></i>&nbsp;活動快報</p>
+                    <span>凡是消費滿二百，就贈送一對白條綠花金龜成體 數量有限送完為止。</span>
                 </div>
             </li>
             <li class="notice">
-                <img src="./img/image-news/list4.png" alt="">
                 <div class="small-box">
-                <p><i class="fa-solid fa-bullhorn"></i>&nbsp;注意!!</p>
-                <span>感謝你的注意!!製作標本的人客請記得來領取你的商品!不然老闆的防潮箱要爆炸啦!!!!</span>
+                    <img src="./img/image-news/list4.png" alt="">
+                    <p class="titleP"><i class="fa-solid fa-bullhorn"></i>&nbsp;注意!!</p>
+                    <span>感謝你的注意!!製作標本的人客請記得來領取你的商品!不然老闆的防潮箱要爆炸啦!!!!</span>
                 </div>
             </li>
             <li class="even">
-                <img src="./img/image-news/list5.png" alt="">
                 <div class="small-box">
-                <p><i class="fa-regular fa-calendar-days"></i>&nbsp;活動快報</p>
-                <span>一年一度的蟲季又來囉~想一起體驗大自然以及抓蟲點燈的樂趣?趕快來找我們報名吧~~!</span>
+                    <img src="./img/image-news/list5.png" alt="">
+                    <p class="titleP"><i class="fa-regular fa-calendar-days"></i>&nbsp;活動快報</p>
+                    <span>一年一度的蟲季又來囉~想一起體驗大自然以及抓蟲點燈的樂趣?趕快來找我們報名吧~~!</span>
                 </div>
             </li>
             <li class="breeding-info">
-                <img src="./img/image-news/list6.png" alt="">
                 <div class="small-box">
-                <p><i class="fa-solid fa-leaf"></i>&nbsp;大家敲碗已久的螃蟹鍬到貨啦!!</p>
-                <span>來自非洲喀麥隆的珍奇異蟲又來了~數量有限售完為止唷。</span>
+                    <img src="./img/image-news/list6.png" alt="">
+                    <p class="titleP"><i class="fa-solid fa-leaf"></i>&nbsp;大家敲碗已久的螃蟹鍬到貨啦!!</p>
+                    <span>來自非洲喀麥隆的珍奇異蟲又來了~數量有限售完為止唷。</span>
                 </div>
             </li>
             <li class="notice">
-                <img src="./img/image-news/list7.png" alt="">
                 <div class="small-box">
-                <p><i class="fa-solid fa-bullhorn"></i>&nbsp;再次宣導</p>
-                <span>請不要將手指伸入鍬形蟲大顎及南洋大兜的頭胸甲縫隙中，若發生意外請自行負責。</span>
+                    <img src="./img/image-news/list7.png" alt="">
+                    <p class="titleP"><i class="fa-solid fa-bullhorn"></i>&nbsp;再次宣導</p>
+                    <span>請不要將手指伸入鍬形蟲大顎及南洋大兜的頭胸甲縫隙中，若發生意外請自行負責。</span>
                 </div>
             </li>
             <li class="breeding-info">
-                <img src="./img/image-news/list8.png" alt="">
                 <div class="small-box">
-                <p><i class="fa-solid fa-leaf"></i>&nbsp;甲蟲回憶錄</p>
-                <span>大家耳熟能詳的獨角仙，但你想知道要如何養出大型個體嗎?趕快來看看甲蟲研究所吧!</span>
+                    <img src="./img/image-news/list8.png" alt="">
+                    <p class="titleP"><i class="fa-solid fa-leaf"></i>&nbsp;甲蟲回憶錄</p>
+                    <span>大家耳熟能詳的獨角仙，但你想知道要如何養出大型個體嗎?趕快來看看甲蟲研究所吧!</span>
                 </div>
             </li>
             <li class="even">
-                <img src="./img/image-news/list9.png" alt="">
                 <div class="small-box">
-                <p><i class="fa-regular fa-calendar-days"></i>&nbsp;活動快報</p>
-                <span>南投仁愛鄉產兩點赤鋸齒鍬形蟲贈送中，出示IG追蹤畫面即可享有一對成蟲，送完為止。</span>
+                    <img src="./img/image-news/list9.png" alt="">
+                    <p class="titleP"><i class="fa-regular fa-calendar-days"></i>&nbsp;活動快報</p>
+                    <span>南投仁愛鄉產兩點赤鋸齒鍬形蟲贈送中，出示IG追蹤畫面即可享有一對成蟲，送完為止。</span>
              </div>
             </li>
         </ul>
