--- a/checkout.html
+++ b/checkout.html
@@ -159,7 +159,12 @@
             </li>
             <li>
                 <input type="radio" name="pay-method" value="pay-by-creditcard" checked>
-                <span>信用卡付款</span>
+                <div class="credit-card">
+                    <span>信用卡付款</span>
+                    <img src="./img/img-checkout/jcb.png" alt="jcb">
+                    <img src="./img/img-checkout/master.png" alt="master">
+                    <img src="./img/img-checkout/visa.png" alt="visa">
+                </div>
             </li>
             <li>
                 <label for="cardholder-name">持卡人姓名</label>
