--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>甲蟲羽錄 Recording of Beetles</title>
+    <link rel="icon" href="./img/favicon/favicon.png" type="imge/png">
     <link rel="stylesheet" href="./CSS/preloader.css">
      <script src="./JavaScript/preloader.js"></script>
     <link rel="stylesheet" href="./CSS/style.css">
