--- a/news.html
+++ b/news.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>最新消息 News</title>
+    <link rel="icon" href="./img/favicon/favicon.png" type="imge/png">
     <link rel="stylesheet" href="./CSS/basic.css">
     <link rel="stylesheet" href="./CSS/news.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
