--- a/index.html
+++ b/index.html
@@ -106,7 +106,14 @@
         </ul>
 
     <!-- Swiper  RWD -->
-  <div class="swiper mySwiper">
+  <div class="swiper mySwiper rwd-middle">
+        <div id="cover-middle">
+          <ul class="arrows">
+            <li class="arrow"><i class="fa-solid fa-left-long fa-2xl" style="color: #161d1b;"></i></li>
+            <li class="arrow"><i class="fa-solid fa-left-long fa-2xl" style="color: #161d1b;"></i></li>
+            <li class="arrow"><i class="fa-solid fa-left-long fa-2xl" style="color: #161d1b;"></i></li>
+          </ul>
+        </div>
     <div class="swiper-wrapper">
       <div class="swiper-slide slide1"><img src="./img/image-index/product1.png" alt=""></div>
       <div class="swiper-slide slide2"><img src="./img/image-index/product2.png" alt=""></div>
@@ -128,9 +135,16 @@
         </ul>
 
                 <!-- Swiper RWD2-->
-        <div class="swiper mySwiper bottom-swiper">
+        <div class="swiper mySwiper bottom-swiper rwd-extra">
+            <div id="cover-extra">
+                <ul class="ex-arrows">
+                  <li class="ex-arrow"><i class="fa-solid fa-left-long fa-2xl" style="color: #161d1b;"></i></li>
+                  <li class="ex-arrow"><i class="fa-solid fa-left-long fa-2xl" style="color: #161d1b;"></i></li>
+                  <li class="ex-arrow"><i class="fa-solid fa-left-long fa-2xl" style="color: #161d1b;"></i></li>
+                </ul>
+              </div>
             <div class="swiper-wrapper bottom-swiper-wrapper">
-            <div class="swiper-slide"><img src="./img/image-index/record1.png" alt=""><span>PGK 118mm</span></div>
+            <div class="swiper-slide pgkNo1"><img src="./img/image-index/record1.png" alt=""><span>PGK 118mm</span></div>
             <div class="swiper-slide"><img src="./img/image-index/record2.png" alt=""><span>DTT 108mm</span></div>
             <div class="swiper-slide"><img src="./img/image-index/record3.png" alt=""><span>PGD 109mm</span></li></div>
             <div class="swiper-slide"><img src="./img/image-index/record4.png" alt=""><span>MT  90mm</span></li></div>
