index add animation

--- a/news.html
+++ b/news.html
@@ -199,5 +199,5 @@
 <!-- 監聽滾動事件 -->
 <script src="./JavaScript/basic.js" ></script>
 <script src="./JavaScript/news.js"></script>
-<!-- <script src="./JavaScript/swiper-bundle.js"></script> -->
+<script src="./JavaScript/swiper-bundle.js"></script>
 </html>
