--- a/beetle-lab.html
+++ b/beetle-lab.html
@@ -252,5 +252,5 @@
 </body>
 <script src="./JavaScript/basic.js" ></script>
 <script src="./JavaScript/jquery-3.7.1.js"></script>
-<script src="./JavaScript/beetle-bulletin.js"></script>
+<script src="./JavaScript/beetle-lab.js"></script>
 </html>
