--- a/index.html
+++ b/index.html
@@ -109,9 +109,7 @@
   <div class="swiper mySwiper rwd-middle">
         <div id="cover-middle">
           <ul class="arrows">
-            <li class="arrow ani-ar"><i class="fa-solid fa-left-long fa-2xl" style="color: #161d1b;"></i></li>
-            <li class="arrow ani-ar"><i class="fa-solid fa-left-long fa-2xl" style="color: #161d1b;"></i></li>
-            <li class="arrow ani-ar"><i class="fa-solid fa-left-long fa-2xl" style="color: #161d1b;"></i></li>
+            <li class="arrow ani-ar"><i class="fa-solid fa-chevron-left fa-2xl" style="color: #161d1b;"></i></li>
           </ul>
         </div>
     <div class="swiper-wrapper">
@@ -138,9 +136,7 @@
         <div class="swiper mySwiper bottom-swiper rwd-extra">
             <div id="cover-extra">
                 <ul class="ex-arrows">
-                  <li class="ex-arrow ani-ar"><i class="fa-solid fa-left-long fa-2xl" style="color: #161d1b;"></i></li>
-                  <li class="ex-arrow ani-ar"><i class="fa-solid fa-left-long fa-2xl" style="color: #161d1b;"></i></li>
-                  <li class="ex-arrow ani-ar"><i class="fa-solid fa-left-long fa-2xl" style="color: #161d1b;"></i></li>
+                  <li class="ex-arrow ani-ar"><i class="fa-solid fa-chevron-left fa-2xl" style="color: #161d1b;"></i></li>
                 </ul>
               </div>
             <div class="swiper-wrapper bottom-swiper-wrapper">
